Fix accessibility issue in the multiple content page and listings. Text color on top of white changed to a contrast of a least 4.5:1

--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -78,3 +78,32 @@
 @theme-menu-a-color:						 #ffffff;
 @theme-menu-a-font-size:					 1.125em;
 @theme-menu-a-color-not-currentlanguage:	 #7f7f7f;
+
+
+/* Listings */
+@theme-listing-content-core-margin-top:		 55px;
+@theme-listing-content-core-padding-left:	 10px;
+@theme-listing-content-core-padding-right:	 10px;
+
+@theme-listing-entry-margin-bottom:			 35px;
+
+@theme-listing-title-color:					 #242424;
+@theme-listing-title-font-size:			     1.250em;
+@theme-listing-title-line-height:			 26px;
+@theme-listing-title-margin-top:			 15px;
+@theme-listing-title-margin-bottom:			 5px;
+@theme-listing-title-border-bottom:			 0px;
+@theme-listing-title-text-decoration:		 none;
+@theme-listing-title-text-decoration-hover:  underline;
+
+@theme-listing-description-color:			 #797676;
+@theme-listing-description-font-size:	     1.125em;
+@theme-listing-description-line-height:		 26px;
+@theme-listing-description-margin-top:		 2px;
+@theme-listing-description-margin-bottom:    10px;
+
+@theme-list-document-by-line-font-size:		 0.850em;
+@theme-list-document-by-line-margin-bottom:  0px;
+
+
+
